25.jun (ws)
      - fix regression introduced in fixing #6138
      - fix #5903: Duration arithmentic with longa and brevis
       (la)
      - fix #6079: problem in multimeasure rests with 2 staves score
24.jun (ws)
      - fix #6138: crash on creating new score (after some steps)
      - fix #6076: crash on play a new score after exiting a playing score
      - refuse to open incompatible score files (file version number > current
        versione number); this adds new translatable strings
        (la)
      - fix #6163: Export MIDI in wrong preference tab
22.jun (la)
      - fix #6195 : breve rest & longa rest are inversed
      - Add Hebrew and Slovenian translation files
21.jun (ws)
      - fix dragging from palette of measure repeat symbol
20.jun (db)
      - remove incompatible "temperament tuning" plugin
      (la)
      - fix #6172 : note properties does not keep notehead group
18.jun (la)
      - fix #5949 : MIDI import gives unexpectedly silent notes
      - fix #6144 : Notes (and other signs) in small staves are smaller than they should
17.jun (la)
      - fix #6134 : Fingering text offset does not save units and alignment
15.jun (la)
      - fix #6060 for composed locale names
      - fix #6114 : SVG graphics disappear after reload
12.jun (la)
      - fix #6072 : Crash when adding note to wrong percussion staff
      - patch by Aaron Epstein for #5923 : Transpose chordnames does not preserve pitch spelling
      - fix #6060 : Help > Local Handbook doesn't work on windows
10.jun (la)
      - add files for Basque translation
      - fix #6049 : 0.9.5 file with breve or longa cannot be opened with MuseScore 0.9.6
9.jun (la)
      - update qt_cs.ts
4.jun (ws)
      - hide inspector in production build
      - fix #5957: Play/Don't play repeat dies not have immediate effect
3.jun (ws)
      - changed behaviour of measure->add(Segment*) which fixes
        #5932 overture file import error
2.jun (ws)
      - fix crash #5917 by range checking tpc values