@@ -934,7 +934,7 @@ void TextB::startEdit(ScoreView* view, const QPointF& p)
 
 bool TextB::isEditable()
       {
-      return !((type() == TEXT) && (subtype() == TEXT_MEASURE_NUMBER));
+      return !((type() == TEXT) && (subtype() == TEXT_MEASURE_NUMBER) || (subtype() == TEXT_PAGE_NUMBER_ODD) || (subtype() == TEXT_PAGE_NUMBER_EVEN));
       }
 
 //---------------------------------------------------------
